# carbs

./: .gitignore  README.md  pyproject.toml  setup.py  try_carbs.py
carbs/: __init__.py  carbs.py  model.py  serialization.py  test_carbs.py  utils.py
notebooks/: analyze_carbs.sync.ipynb  carbs_demo.ipynb  carbs_simple_2d.sync.ipynb
